# nox

./: .clang-format  .gitignore  CMakeLists.txt  Install.sh  README.md
src/: main.c
